--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,58 +1,249 @@
 {
     "cSpell.ignoreWords": [
+        "a",
+        "absolute",
         "adipisicing",
+        "aefd",
+        "after",
+        "align",
         "aliquam",
+        "alpha",
         "amet",
         "aperiam",
+        "aspernatur",
+        "auto",
+        "b",
+        "background",
+        "banner",
+        "bao",
         "before",
+        "best",
+        "between",
+        "bien",
+        "block",
+        "blue",
+        "body",
+        "border",
+        "bottom",
+        "box",
+        "btn",
+        "buttons",
+        "c",
+        "cad",
+        "calc",
+        "category",
+        "center",
+        "ch",
         "cha",
+        "child",
+        "cho",
+        "circle",
+        "clamp",
+        "class",
+        "color",
+        "column",
         "con",
         "consectetur",
+        "consequatur",
+        "container",
+        "content",
+        "corporis",
         "corrupti",
+        "cover",
         "crossorigin",
+        "css",
+        "cumque",
+        "current",
+        "cursor",
         "d",
+        "decoration",
+        "desc",
+        "details",
+        "dir",
+        "direction",
+        "display",
+        "div",
         "dolor",
+        "du",
         "dung",
         "eaque",
+        "earum",
         "eligendi",
         "elit",
+        "ellipsis",
+        "end",
         "et",
+        "even",
+        "eveniet",
         "ex",
         "excepturi",
         "explicabo",
+        "f",
         "facere",
         "facilis",
+        "family",
+        "feature",
+        "ff",
+        "ffc",
+        "first",
+        "fit",
+        "fix",
+        "flex",
+        "font",
+        "for",
+        "gray",
+        "green",
+        "h",
+        "has",
+        "header",
+        "heading",
+        "height",
+        "hic",
+        "hidden",
+        "hoa",
+        "hover",
+        "html",
         "i",
+        "icon",
         "id",
         "illo",
         "illum",
+        "image",
+        "img",
+        "impedit",
+        "important",
         "incidunt",
+        "include",
+        "index",
+        "info",
+        "inherit",
+        "inline",
+        "inner",
+        "intro",
+        "ipsa",
         "ipsum",
         "iste",
+        "item",
+        "items",
+        "justify",
+        "k",
+        "khai",
+        "khai bao bien",
         "l",
+        "last",
+        "left",
         "libero",
+        "line",
+        "linear",
+        "link",
+        "list",
+        "logo",
         "lorem",
+        "lorem ipsum dolor sit amet consectetur adipisicing elit impedit hic veniam voluptatem cumque ut earum corrupti tempora ipsa corporis neque ratione voluptatum eveniet nesciunt consequatur iste tempore aspernatur praesentium",
         "lorem ipsum dolor sit amet consectetur adipisicing elit neque magnam eaque aliquam facere eligendi et",
         "lorem ipsum dolor sit amet consectetur adipisicing elit perferendis facilis natus illum incidunt quasi aperiam eligendi iste illo soluta obcaecati repellendus id libero excepturi explicabo corrupti ex placeat odit quidem",
+        "m",
         "magnam",
+        "margin",
+        "max",
+        "menu",
+        "minh",
+        "mixin",
         "n",
+        "name",
         "natus",
         "neque",
+        "nesciunt",
         "ng",
+        "nh",
+        "none",
+        "nowrap",
+        "nth",
+        "o",
         "obcaecati",
+        "object",
+        "odd",
         "odit",
+        "opacity",
+        "orient",
+        "outline",
+        "overflow",
+        "p",
+        "padding",
+        "page",
         "perferendis",
         "ph",
         "placeat",
+        "pointer",
+        "poppins",
         "position",
+        "praesentium",
+        "primary",
+        "purple",
+        "px",
         "quasi",
         "quidem",
+        "radius",
+        "ratione",
+        "red",
         "relative",
+        "rem",
         "repellendus",
+        "reverse",
+        "rgba",
+        "right",
+        "rounded",
+        "row",
+        "s",
+        "sai",
+        "sans",
+        "serif",
+        "set",
+        "setup",
+        "shadow",
         "sit",
+        "size",
+        "sizing",
+        "solid",
         "soluta",
+        "space",
+        "start",
+        "stretch",
+        "t",
+        "tag",
+        "tempora",
+        "tempore",
+        "text",
         "th",
+        "title",
+        "to",
+        "top",
+        "tr",
+        "transform",
+        "transition",
+        "translate",
+        "transparent",
+        "trong",
+        "u",
+        "underline",
+        "ut",
         "v",
-        "vì thằng con dùng before nên cha phải dung position là relative"
+        "veniam",
+        "vertical",
+        "vi",
+        "vi du minh hoa primary color blue mixin flex box align start justify wrap display items center content header height px logo include end nowrap khai bao bien ffc a text b f gray c cad dir row direction size width setup một số thứ cơ bản set đơn vị rem html font body family poppins sans serif line weight padding bottom sizing cho toàn bộ page class id before after border webkit for tag img block max decoration none wrapper website margin auto container trong trường hợp này yêu cầu là nhưng nếu div thì sẽ bị sai kích để fix phải cộng dồn với có left right top inner space between menu list item last child link transition s linear hover banner heading desc buttons stretch btn cursor pointer outline inline background transparent solid current rounded radius has shadow category calc white column first rgba ff alpha nth d image inherit object fit cover name đoạn css cắt chữ overflow hidden ellipsis details i feature odd info even reverse title intro underline circle position relative vì thằng con dùng nên cha dung absolute aefd transform translate y red green yellow best icon important purple z index opacity clamp orient vertical",
+        "voluptatem",
+        "voluptatum",
+        "vì thằng con dùng before nên cha phải dung position là relative",
+        "webkit",
+        "website",
+        "weight",
+        "white",
+        "width",
+        "wrap",
+        "wrapper",
+        "y",
+        "yellow",
+        "z"
     ]
 }
